Align quote text, fix margins, and min pic width.

--- a/styles.css
+++ b/styles.css
@@ -94,13 +94,13 @@ a {
 .image {
     display: flex;
     flex-direction: column;
-    max-width: 400px;
+    max-width: 300px;
 }
 
 .quote {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     background-color: #E5E7EB;
     padding: 75px;
 }
@@ -110,9 +110,12 @@ a {
     font-size: 36px;
     color: #1F2937;
     font-style: italic;
-    font-weight: 300;
+    font-weight: 100;
+    margin: 0;
 }
 
 .quote-source {
-    display: flex;
+    font-weight: bold;
+    padding-right: 260px;
+    margin: 0;
 }
